Updated pom to handle mockito warning in tests. Updated UserMapperTest to use real object instances. Updated UserRepository to have two params for OR query.